@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object name="uid_catalog">
+  <index name="Language" meta_type="LanguageIndex">
+   <property name="fallback">True</property>
+  </index>
+</object>
